--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EC-CUBE/ec-cube.git"
+    "url": "git+https://github.com/naomi-ta/ec-cube.git"
   },
   "author": "",
   "license": "GPL-2.0",
