--- a/.env.dist
+++ b/.env.dist
@@ -28,7 +28,8 @@ DATABASE_SERVER_VERSION=3
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # For a debug SMTP server, use: "smtp://mailcatcher:1025"
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+# MAILER_URL=null://localhost
+MAILER_URL=smtp://${MAILGUN_SMTP_SERVER}:${MAILGUN_SMTP_PORT}?encryption=ssl&auth_mode=login&username=${MAILGUN_SMTP_LOGIN}&password=${MAILGUN_SMTP_PASSWORD}
 ###< symfony/swiftmailer-bundle ###
 
 ###> APPLICATION CONFIG ###
